--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,31 +2,50 @@
 
 version: '3'
 
+env:
+  BRANCH:
+    sh: git branch --show-current
+
+dotenv: [ '.env' ]
+
 tasks:
   default:
     cmds:
       - task -l
     silent: true
 
+  # Start local Tigris instance if TIGRIS_URL in the .env points to the localhost
+  ensure:tigris:
+    status:
+      - bin/tigris ping || echo "$TIGRIS_URL" | grep -v "localhost"
+    cmds:
+      - docker compose up -d tigris
+      - bin/tigris ping --timeout=20s
+      - bin/tigris create project test
+      - bin/tigris branch create $BRANCH
+
   run:
-    desc: Run test in the development environment
+    desc: Start the project
     deps: [deps]
     cmds:
-      - task: clean
-      - bin/tigris dev start
-      - TIGRIS_URL=localhost:8081 bin/tigris create project test
-      - TIGRIS_URL=localhost:8081 go run main.go
+      - task: ensure:tigris
+      - bin/tigris branch reset $BRANCH
+      - go run -ldflags "-X 'main.Branch={{.BRANCH}}'" main.go
 
   run:docker:
-    desc: Run test in the Docker development environment
+    desc: Start the project in the docker
     deps: [deps]
     cmds:
-      - task: clean
-      - docker compose up -d tigris
-      - TIGRIS_URL=localhost:8081 bin/tigris ping --timeout=20s
-      - TIGRIS_URL=localhost:8081 bin/tigris create project test
-      - docker compose up --build -d service
+      - task: ensure:tigris
+      - bin/tigris branch reset $BRANCH
+      - TIGRIS_URL={{if eq .TIGRIS_URL "localhost:8081"}}tigris-local-server:8081{{else}}{{.TIGRIS_URL}}{{end}} docker compose up --build -d service
       - echo "The test service is up and running at http://localhost:8080"
+
+  test:
+    desc: Run the tests
+    deps: [run:docker]
+    cmds:
+      - go test ./...
 
   deps:
     desc: Install dependencies
@@ -35,9 +54,9 @@ tasks:
     cmds:
       - mkdir -p bin
       - curl -sSL https://tigris.dev/cli-{{if eq OS "darwin"}}macos{{else}}{{OS}}{{end}}{{if eq ARCH "arm"}}-arm64{{end}} | tar -xz -C ./bin
+      - git config core.hooksPath ./.gitconfig/hooks
 
   clean:
     desc: Cleanup the resources
     cmds:
       - docker compose down
-      - bin/tigris dev stop
